# dde-widgets-weather-plugin

./: .gitignore  CMakeLists.txt  README.md  README.zh-Hans.md
debian/: changelog  control  copyright  rules
resources/: resources.qrc
src/: CMakeLists.txt  global.h  plugin.cpp  plugin.h  plugin.json  settingsdialog.cpp  settingsdialog.h  src.cmake  weatherdisplaywidget.cpp  weatherdisplaywidget.h
src/api/: config.hpp  data.hpp  qweatherapi.cpp  qweatherapi.h
src/log/: logging_categories.cpp  logging_categories.h
translations/: CMakeLists.txt  dde-widgets-weather_zh_CN.ts
